fix SD_1 game clippath position and size

--- a/graphics/SD_1.html
+++ b/graphics/SD_1.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>SD_1</title><link href="css/SD_1.css" rel="stylesheet"></head><body><div id="App"></div><script src="js/SD_1.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>SD_1</title>
+</head>
+
+<body>
+  <div id="App"></div>
+<script src="js/SD_1.js"></script></body>
+
+</html>
